<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".form_data">

<com.google.android.material.tabs.TabLayout
    android:id="@+id/tabLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.473"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0">

    <com.google.android.material.tabs.TabItem
        android:id="@+id/tabExpenseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense" />

    <com.google.android.material.tabs.TabItem
        android:id="@+id/tabIncomeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income" />

</com.google.android.material.tabs.TabLayout>

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tabLayout"
    app:layout_constraintVertical_bias="0.028">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/category"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/displayCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/food"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textSize="18sp" />

        </LinearLayout>

        <GridLayout
            android:id="@+id/expenseBtnGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:columnCount="2"
            android:padding="5dp"
            android:rowCount="3"
            android:visibility="visible">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/c1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/food"
                android:textColor="@color/secondaryDarkColor"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/c2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/transp"
                android:textColor="@color/secondaryDarkColor"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/c3"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/clothes"
                android:textColor="@color/secondaryDarkColor"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/c4"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/edu"
                android:textColor="@color/secondaryDarkColor"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/c5"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/acc"
                android:textColor="@color/secondaryDarkColor"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/c6"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/social"
                android:textColor="@color/secondaryDarkColor"/>

        </GridLayout>

        <GridLayout
            android:id="@+id/incomeBtnGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:columnCount="2"
            android:padding="5dp"
            android:rowCount="2"
            android:visibility="gone">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/inc1"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/salary"
                android:textColor="@color/secondaryDarkColor"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/inc2"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/allowance"
                android:textColor="@color/secondaryDarkColor"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/inc3"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/bonus"
                android:textColor="@color/secondaryDarkColor"/>

        </GridLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/amount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/red"
                android:text="Save" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>